--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,6 +75,9 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
     user_class: AppBundle\Entity\User
+    registration:
+        form:
+            type: AppBundle\Form\RegistrationType
     service:                               # this line
         mailer: fos_user.mailer.twig_swift # this line (from the comment above)
     from_email:
