--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,11 +7,12 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     brochures_directory: '%kernel.project_dir%/web/uploads/brochures'
-    locale: en
+    locale: pl
 
 framework:
     #esi: ~
-    translator: { fallbacks: ['%locale%'] }
+    translator: 
+        fallbacks: ['%locale%']
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
